--- a/404.html
+++ b/404.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
+<head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="noindex, nofollow">
+<meta name="robots" content="index, follow">
 <title>404 Page not found | MedusaSec</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://localhost:1313/404.html">
+<link rel="canonical" href="https://medusasec.com.br/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.93f625d739f1d6a5c6f20c146bc6a8d26b233492b34b2220c54b12fd46a04ded.css" integrity="sha256-k/Yl1znx1qXG8gwUa8ao0msjNJKzSyIgxUsS/UagTe0=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://localhost:1313/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://localhost:1313/apple-touch-icon.png">
-<link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
+<link rel="icon" href="https://medusasec.com.br/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://medusasec.com.br/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://medusasec.com.br/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://medusasec.com.br/apple-touch-icon.png">
+<link rel="mask-icon" href="https://medusasec.com.br/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/404.html">
+<link rel="alternate" hreflang="en" href="https://medusasec.com.br/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -27,7 +27,15 @@
         }
 
     </style>
-</noscript>
+</noscript><meta property="og:url" content="https://medusasec.com.br/404.html">
+  <meta property="og:site_name" content="MedusaSec">
+  <meta property="og:title" content="404 Page not found">
+  <meta property="og:locale" content="pt-br">
+  <meta property="og:type" content="website">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="404 Page not found">
+<meta name="twitter:description" content="">
+
 </head>
 
 <body class="list dark" id="top">
@@ -41,8 +49,8 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/" accesskey="h" title="MedusaSec (Alt + H)">
-                <img src="http://localhost:1313/images/logo.png" alt="" aria-label="logo"
+            <a href="https://medusasec.com.br/" accesskey="h" title="MedusaSec (Alt + H)">
+                <img src="https://medusasec.com.br/images/logo.png" alt="" aria-label="logo"
                     height="30">MedusaSec</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
@@ -69,22 +77,22 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="http://localhost:1313/red-team/" title="Red Team">
+                <a href="https://medusasec.com.br/red-team/" title="Red Team">
                     <span>Red Team</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/blue-team/" title="Blue Team">
+                <a href="https://medusasec.com.br/blue-team/" title="Blue Team">
                     <span>Blue Team</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/coding/" title="Coding">
+                <a href="https://medusasec.com.br/coding/" title="Coding">
                     <span>Coding</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/about-us/" title="About Us">
+                <a href="https://medusasec.com.br/about-us/" title="About Us">
                     <span>About Us</span>
                 </a>
             </li>
@@ -96,7 +104,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://localhost:1313/">MedusaSec</a></span> · 
+        <span>&copy; 2025 <a href="https://medusasec.com.br/">MedusaSec</a></span> · 
 
     <span>
         Powered by
